--- a/templates/index.html
+++ b/templates/index.html
@@ -59,11 +59,16 @@
                     </form>
                     {% if past_queries %}
                     <div class="recent-history">
-                    <ul>
-                        {% for item in past_queries %}
-                        <li class="history-item">{{ item[0] }}</li>
-                        {% endfor %}
-                    </ul>
+                        <h3 style="font-size: 1rem; color: var(--color-text-muted); margin-bottom: 10px; text-align: left; padding-left: 10px;">Recent Searches:</h3>
+                        <ul style="list-style: none; padding: 0; margin: 0; display: flex; flex-wrap: wrap; gap: 8px;">
+                            {% for item in past_queries %}
+                            <li>
+                                <a href="#" class="recent-query-link" data-query="{{ item[0] }}">
+                                    {{ item[0] }}
+                                </a>
+                            </li>
+                            {% endfor %}
+                        </ul>
                     </div>
                     {% endif %}
                     </div>
